--- a/style.css
+++ b/style.css
@@ -8,8 +8,13 @@
 }
 
 body {
+    background-color: #FFD000;
     display: flex;
     height: 100vh;
+    width: 100%;
+}
+.hola{
+    background-color: #FFD000;
 }
 
 #logo {
@@ -22,6 +27,7 @@ body {
 
 .row {
     display: flex;
+    background-color: #FFD000;
     height: 100vh;
 }
 
@@ -51,8 +57,9 @@ button {
 }
 
 #section2 {
-    background-color: #FFD000;
+
     display: flex;
+    justify-content: center;
     align-items: center;
     justify-items: center;
 
@@ -64,7 +71,6 @@ button {
     background-color: black;
     box-shadow: #ffffff 10px 10px 0px;
     border: solid #62676A 2px;
-    margin-left: 180px;
 }
 
 .absolute {
@@ -99,6 +105,7 @@ button {
     background: transparent;
     text-align: center;
     font-size: 35px;
+    color: white;
 }
 #file{
     color: white;
